--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "eslint": "^7.32.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
@@ -33,5 +34,11 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.21"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
   }
+
 }
